kubernetes/overlays/k3s/cicd/chaos-mesh/chaos-mesh/ingress.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
  labels:
    # renovate: registryUrl=https://charts.chaos-mesh.org
    helm.sh/chart: chaos-mesh-v0.5.1
    app.kubernetes.io/name: chaos-mesh
    app.kubernetes.io/version: v0.5.1
    app.kubernetes.io/component: chaos-dashboard
    app.kubernetes.io/instance: chaos-mesh
    app.kubernetes.io/part-of: chaos-mesh
    app.kubernetes.io/managed-by: Helm
    portefaix.xyz/version: v0.23.0
  name: chaos-dashboard-external
  namespace: chaos-mesh
spec:
  rules:
  - host: chaos-mesh.homelab.portefaix.xyz
    http:
      paths:
      - backend:
          serviceName: chaos-dashboard
          servicePort: http
        path: /
        pathType: ImplementationSpecific
